Update text, work in progress

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -185,7 +185,7 @@ a.button span {
     background: transparent url(../images/octocat-icon.png) 12px 50% no-repeat;
 }
 
-#show-releases {
+#view-on-github {
     margin-right: 0;
 }
 
