Update text to reflect the changes in the latest release

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -417,3 +417,8 @@ footer img {
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 479px) {
 }
+
+ul, ol {
+    margin-left: 26px;
+}
+
